# react-python

./: .gitignore  docker-compose.yml
api/: Dockerfile  database_dynamodb.py  main.py  pyproject.toml  react-example.js
front/: Dockerfile  package-lock.json  package.json  vite.config.ts
front/src/: App.tsx
